--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
-    <div class="container"></div>
-       <div class="container">
-          <a href="#" class="btn btn-red">Click Me!</a>
-          <img src="images/mario.jpg" alt="" class="mario">
-          <div class="text-effect">Super Mario 64</div>
-          <div class="mario-parent">
-          <div class="mario-gallery">
-            <img src="images/mar1.jpg" alt="" class="mar-photo mar-photo-1">
-            <img src="images/mar2.jpg" alt="" class="mar-photo mar-photo-2">
-            <img src="images/mar3.jpg" alt="" class="mar-photo mar-photo-3">
-          </div>
-       </div> 
-       <div class="explore">
-           <img src="images/bomb1.jpg" alt="" class="explore-picture">
-           <h1 class="explore-header">Adventure Awaits!</h1>
-       </div>
-    </div>
-</body>
-</html>
+
+<div class="container"></div>
+    <a href="#" class="btn btn-1"></a>
+    <a herf="#" class="btn btn-2">Hover</a>
+      
+    <button>
+        <div></div>
+      </button>
+
+      <div class="data-container">
+
+        <span class="btn btn-4">Hover Me </span>
+        </div>
+
+        <div class="button_container">
+            <p class="description">A simple pure CSS hover effect</p>
+            <button class="btn-5"><span>Hover me!</span></button>
+
+        </div>     
