--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-
+<div class="wrap">
+    <a href="#" class="slide">Hover Over Me</a>
+    </div>
 <div class="container"></div>
     <a href="#" class="btn btn-1"></a>
     <a herf="#" class="btn btn-2">Hover</a>
@@ -19,8 +21,6 @@
         <span class="btn btn-4">Hover Me </span>
         </div>
 
-        <div class="button_container">
-            <p class="description">A simple pure CSS hover effect</p>
-            <button class="btn-5"><span>Hover me!</span></button>
-
-        </div>     
+        <div class="wrap">
+            <a href="#" class="slide">Hover Over Me</a>
+            </div>
